--- a/layouts/partials/posts.html
+++ b/layouts/partials/posts.html
@@ -1,4 +1,4 @@
-<h3>{{ i18n "posts.title" }}</h3>
+<h4>Calm in the Chaos</h4>
 <ul id="posts">
 {{- range where site.RegularPages "Type" "in" site.Params.mainSections }}
     {{ .Render "li" }}
